fix trip description missing white space

--- a/src/pages/trips/viewTrip/ViewTrip.module.scss
+++ b/src/pages/trips/viewTrip/ViewTrip.module.scss
@@ -11,6 +11,9 @@
         gap:8px;
         font-size: 32px;
     }
+    .tripDescription{
+        white-space:pre
+    }
     .subtitle{
         align-items: center;
         justify-content: start;
